# GitCredit

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
examples/hooks/: post-commit.sample  post-push.sample
packaging/homebrew/: gitcredit.rb
src/: config.rs  git_context.rs  git_exec.rs  main.rs  reporter.rs
